# stilo

./: .gitignore  README.md  manage.py  pyproject.toml
core/: admin.py  context_processors.py  email_backend.py  fields.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py  webhooks.py
core/management/commands/: cleanup_orphans.py  seed_data.py  seed_demo.py
core/migrations/: 0001_initial.py  0002_workinghours.py  0003_remove_user_is_client.py  0004_alter_hairdresser_address_and_more.py  0005_hairdresser_cover_image_alter_user_email_and_more.py  0006_alter_appointment_status.py  0007_add_amount_to_appointment.py  0008_alter_appointment_amount_and_more.py  0009_mercadopago.py  0010_appointment_extra_minutes_and_more.py  0011_appointment_client_name.py  0012_hairdresser_slot_duration.py  0013_pause.py
core/static/css/: style.css
core/static/js/: service-worker.js
core/templates/: appointment_modal.html  base.html  debug_email_list.html  early_start_result.html  hairdresser_detail.html  home.html  login.html  my_appointments.html  my_hairdresser.html  my_hairdresser_base.html  my_hairdresser_hours.html  my_hairdresser_images.html  my_hairdresser_info.html  my_hairdresser_services.html  owner_appointments.html  owner_dashboard.html  owner_stats.html  password_change.html  service_confirm_delete.html  service_form.html  service_list.html  signup.html  user_profile.html  workstation.html
core/templates/emails/: appointment_cancelled_client.html  appointment_cancelled_owner.html  appointment_reminder.html  (+9 more)
stilo/: asgi.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
